fix: remove invalid -Xverify:none flag causing Java 17+ launch failure